fix: Change h3 text color in welcomeBox from white to black for better visibility

--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -31,7 +31,7 @@
 .welcomeBox h3{
     font-size: 5rem;
     font-weight: 500;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     margin: 4rem 0rem 2rem;
     font-family: Arial, Helvetica, sans-serif;
 }
